# klyg

./: CMakeLists.txt  cdeque.c  cdeque.h  contour.c  contour.cpp  contour.h  contourcollection.cpp  contourcollection.h  glwi.cpp  glwi.h  klyg.pro  l19math.h.autosave  l19maxwell.cpp  l19maxwell.h  l19maxwellSC.c  l19maxwellSC.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  vector.c  vector.h
